--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,7 +8,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
  
 # JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
