Deploy app Heroku

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,10 +2,18 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_vendas
 spring.datasource.username=postgres
 spring.datasource.password=ge123456
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true  
+# Evita problemas de versão do Postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true 
+ 
+# Toda vez que rodar a aplicação ele vai atualizar
 spring.jpa.hibernate.ddl-auto=update
+
+# Log do sql, mostrar o sql
 spring.jpa.show-sql=true
+
+# Formatar o sql
 spring.jpa.properties.hibernate.format_sql=true
 
+# Caso esteja usando autenticação JWT
 jwt.secret=MYJWTSECRET
 jwt.expiration=3600000
